# ComfyUI-FlashVSR_Ultra_Fast

./: CHANGELOG.md  README.md  __init__.py  cli_main.py  nodes.py  pyproject.toml  requirements.txt  test_mock.py
.github/workflows/: publish.yml
src/: __init__.py
src/configs/: model_config.py
src/models/: TCDecoder.py  model_manager.py  utils.py  wan_video_dit.py  wan_video_vae.py
src/models/sparse_sage/: LICENSE.txt  core.py  quant_per_block.py  sparse_int8_attn.py
src/pipelines/: __init__.py  base.py  flashvsr_full.py  flashvsr_tiny.py  flashvsr_tiny_long.py
src/schedulers/: __init__.py
workflow/: FlashVSR.json
